<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_buscar"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_cursos"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_cursos"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_favoritos"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/title_chat"
        android:orderInCategory="2"/>

</menu>