<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoAcademiaFragment"
    android:id="@+id/info_academia_fragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/info_academia_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_academia"
                android:textAlignment="center"
                android:textSize="40sp"
                android:layout_marginVertical="20dp"/>

            <ImageView
                android:id="@+id/info_academia_imagen"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_presentaci_n_de_la_academia"
                android:src="@drawable/ic_logo_square_icon"
                />

            <LinearLayout
                android:id="@+id/info_academia_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/lbl_email_academia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/azul4"
                    />

                <!-- Precio academia -->
                <TextView
                    android:id="@+id/info_academia_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/telefono"
                    android:textAlignment="gravity"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/azul4"/>

                <TextView
                    android:id="@+id/info_academia_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="200dp"
                    android:text="@string/direccion"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/info_academia_mapView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"

                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaCardsCursos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            

        </LinearLayout>

    </ScrollView>


</FrameLayout>