<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.OpsToolbarFragment"
    android:id="@+id/containerOpsToolbar"
    app:cardCornerRadius="10dp"
    android:paddingTop="?attr/actionBarSize"
    android:layout_gravity="end"
    tools:menu="@menu/top_menu">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/azul1"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="#00DDDDDD"
                android:outlineAmbientShadowColor="#001F71BC"
                android:outlineSpotShadowColor="#001F71BC"
                android:text="@string/perfil"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,UnusedAttribute" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/azul3"
                android:layout_marginVertical="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="#00DDDDDD"
                android:outlineAmbientShadowColor="#001F71BC"
                android:outlineSpotShadowColor="#001F71BC"
                android:text="@string/notificaciones"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,UnusedAttribute" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/azul3"
                android:layout_marginVertical="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="#00DDDDDD"
                android:outlineAmbientShadowColor="#001F71BC"
                android:outlineSpotShadowColor="#001F71BC"
                android:text="@string/ajustes"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,UnusedAttribute" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>